// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/Text Bold 1`] = `
<p
  className="sc-crHmcD jViPiX"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Centered 1`] = `
<p
  className="sc-crHmcD dUWTha"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Custom Color 1`] = `
<p
  className="sc-crHmcD gBuWTd"
  color="primary"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Custom Size 1`] = `
Array [
  <p
    className="sc-crHmcD dtryax"
    size="sm"
  >
    Some Text...
  </p>,
  <p
    className="sc-crHmcD dPdEko"
    size="md"
  >
    Some Text...
  </p>,
  <p
    className="sc-crHmcD duwBpz"
    size="lg"
  >
    Some Text...
  </p>,
  <p
    className="sc-crHmcD dtIzoT"
    size="xl"
  >
    Some Text...
  </p>,
]
`;

exports[`Storyshots Data Display/Text Paragraph Element 1`] = `
Array [
  <p
    className="sc-crHmcD dtryax"
    size="sm"
  >
    Paragraph element is by default
  </p>,
  <p
    className="sc-crHmcD dtryax"
    size="sm"
  >
    Some Text...
  </p>,
]
`;

exports[`Storyshots Data Display/Text Simple Texttext 1`] = `
<p
  className="sc-crHmcD dtryax"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Span Element 1`] = `
Array [
  <span
    className="sc-crHmcD dtryax"
    size="sm"
  >
    This are span elements.
  </span>,
  <span
    className="sc-crHmcD dtryax"
    size="sm"
  >
    Some Text in a span...
  </span>,
]
`;

exports[`Storyshots Data Display/Text With Tooltip 1`] = `
<span
  aria-describedby={null}
  className="sc-crHmcD gBuWTd"
  color="primary"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  size="sm"
  title="some other text"
>
  Some Text...
</span>
`;
